<resources>
    <string name="app_name" translatable="false">Euphonia</string>
    <string name="title_play">Player</string>
    <string name="title_music">Music</string>
    <string name="title_settings">Settings</string>
    <string name="pref_website">Open website</string>
    <string name="main_data_update">Updating data…</string>
    <string name="sort_date">Date</string>
    <string name="sort_random">Random</string>
    <string name="pref_sort">Music sort mode</string>
    <string name="sort_music_name">Song name</string>
    <string name="sort_artist_name">Artist name</string>
    <string name="view_search">Search</string>
    <string name="pref_source_set">Set data source</string>
    <string name="init_set_source">Load data</string>
    <string name="pref_source_add">Add data source</string>
    <string name="pref_data_source">Data source</string>
    <string name="pref_display">Display</string>
    <string name="pref_links">Links</string>
    <string name="pref_github">Open GitHub</string>
    <string name="pref_source_remove">Remove current data source</string>
    <string name="pref_source_remove_confirm">Are you sure you want to remove the current data source?</string>
    <string name="pref_deletion_confirm">Click again to confirm deletion</string>
    <string name="music_updated">All music are now up to date</string>
    <string name="admin_login">Login as admin</string>
    <string name="admin_logoff">Logoff from admin</string>
    <string name="admin_enter_password">Enter admin password</string>
    <string name="admin_login_success">You are now logged as admin</string>
    <string name="admin_login_wrong_password">Invalid password</string>
    <string name="by">by</string>
    <string name="pref_play_order">Music play order</string>
    <string name="invalid_song_title">Redownload song</string>
    <string name="invalid_song_text">Are you sure you want to redownload this song: %s</string>
    <string name="song_redownload_info">This song will be redownloaded the next time you restart the app</string>
    <string name="music_updated_with_value">%d music were updated</string>
    <string name="song_already_deleted">This song was already deleted, please restart your application to redownload it</string>
    <string name="sort_keep_order">Keep order</string>
    <string name="no_song_available">No music available, download some songs first</string>
</resources>